Avatar with link. Orinial in movie. Avatars cropped and centered. Removed search results message.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -308,7 +308,7 @@ movie.view.pageTitle={0} ({1})
 movie.view.meta.releaseDate=D\u00EDa de estreno
 movie.view.meta.popularity=Popularidad: {0}
 movie.view.meta.originalLanguage=Lengua original
-movie.view.meta.originalTitle=Titulo originial
+movie.view.meta.originalTitle=Titulo original
 movie.view.meta.voteAverage=Voto promedio
 movie.view.meta.movieCategories.title=Categor\u00EDa de pel\u00EDcula
 movie.view.overview=Sinopsis
@@ -324,7 +324,6 @@ movie.updatePoster.previousPoster.altText=Poster actual para la pel\u00EDcula: {
 search.notFound=No hay {0} para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
 search.commentsNotFound=No hay comentarios para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
 search.usersNotFound=No hay usuarios para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
-search.searchResults=Resultados de la b\u00FAsqueda
 search.title = Buscar
 
 #############################################################SEARCH-Posts#############################################################
