Refactored Custom Exceptions to use i18n

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -433,6 +433,12 @@ error.illegalUserFollowException=Intentaste seguir a un usuario invalido
 error.illegalUserUnfollowException=Intentaste dejar de seguir a un usuario invalido
 error.illegalCommentEditionException=Intentaste editar un comentario invalido
 error.illegalPostEditionException=Intentaste editar un post invalido
+error.illegalPostBookmarkException=Intentaste guardar un post invalido
+error.illegalPostUnbookmarkException=Intentaste des-guardar un post invalido
+error.invalidSortCriteriaException=Especificaste un ordenamiento invalido
+error.avatarNotFoundException=El avatar que intentaste acceder no existe
+error.posterNotFoundException=El poster al cual intentaste acceder no existe
+error.invalidResetPasswordToken=El token de reseteo de contraseña no es valido
 
 
 
