--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -422,7 +422,7 @@ error.nonExistingSearchCriteriaException=The order provided for the search is in
 error.invalidMovieIdException=A Movie selected is invalid. Make sure the provided info is correct.
 error.invalidPaginationArgumentException=Pagination Arguments provided (Page Size and/or Page Number) are invalid. Make sure the provided info is correct.
 error.invalidRoleException=The Role of the user given is not valid. Make sure the provided info is correct.
-error.DeletedDisabledModelException=You tried to delete an entity which was 
+error.DeletedDisabledModelException=You tried to delete an entity which was disabled
 error.missingPostEditPermissionException=Missing authorization to edit this post
 error.missingCommentEditPermissionException=Missing authorization to edit this comment
 error.illegalUserFollowException=You tried to follow an invalid user
@@ -433,3 +433,9 @@ error.IllegalPostLikeException=You tried to like an invalid post
 error.InvalidUserPromotionException=You tried to promote an invalid user
 error.illegalCommentEditionException=You tried to edit an invalid comment
 error.illegalPostEditionException=You tried to edit an invalid post
+error.illegalPostBookmarkException=You tried to bookmark an invalid post
+error.illegalPostUnbookmarkException=You tried to unbookmark an invalid post
+error.invalidSortCriteriaException=You specified an invalid order
+error.avatarNotFoundException=The user avatar you tried to access doesn't exists
+error.posterNotFoundException=The movie poster you tried to access doesn't exists
+error.invalidResetPasswordToken=The password reset token provided is not valid
