Added Disabled Entity Relationship Access Permissions Logic

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -439,3 +439,4 @@ error.invalidSortCriteriaException=You specified an invalid order
 error.avatarNotFoundException=The user avatar you tried to access doesn't exists
 error.posterNotFoundException=The movie poster you tried to access doesn't exists
 error.invalidResetPasswordToken=The password reset token provided is not valid
+error.forbiddenEntityRelationshipAccessException=You tried to access information of a disabled entity
