--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -439,6 +439,7 @@ error.invalidSortCriteriaException=Especificaste un ordenamiento invalido
 error.avatarNotFoundException=El avatar que intentaste acceder no existe
 error.posterNotFoundException=El poster al cual intentaste acceder no existe
 error.invalidResetPasswordToken=El token de reseteo de contraseña no es valido
+error.forbiddenEntityRelationshipAccessException=Intentaste acceder a informacion de una entidad deshabilitada 
 
 
 
