Added i18n to api error messages (except bean validation errors)

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -438,5 +438,10 @@ error.illegalPostUnbookmarkException=You tried to unbookmark an invalid post
 error.invalidSortCriteriaException=You specified an invalid order
 error.avatarNotFoundException=The user avatar you tried to access doesn't exists
 error.posterNotFoundException=The movie poster you tried to access doesn't exists
-error.invalidResetPasswordToken=The password reset token provided is not valid
+error.invalidResetPasswordTokenException=The password reset token provided is not valid
 error.forbiddenEntityRelationshipAccessException=You tried to access information of a disabled entity
+error.invalidEmailConfirmationTokenException=The email confirmation token provided is not valid
+error.DuplicateUniqueUserAttributeException=The user you tried to create had duplicated unique attributes
+
+error.invalidResetPasswordEmail=Reset password email doesn't belong to any user
+error.notValidatedResetPasswordEmail=Reset password email was not confirmed previously
