Started refactoring image handling to Jersey. Added conditional cache and mime type to image

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -9,8 +9,7 @@ TagSize=Las {0} que elijas no pueden tener más de {1} carácteres
 UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 Pattern={0} inv\u00E1lido
 ValidatedEmail=No hay un usuario con ese email validado
-Avatar=La imagen subida es demasiado pesada o invalida. Intenta seleccionar una más pequeña
-MoviePoster=El poster subido no es una imagen
+Image=El archivo subido no es una imagen
 
 Size.postCreateForm.movies=Debes elegir entre {2} y {1} películas 
 Size.postCreateForm.tags=Puedes elegir hasta {1} {0}
@@ -23,6 +22,7 @@ Size.body=El cuerpo debe tener entre {2} y {1} carácteres
 
 Pattern.username=Nombre de usuario inválido
 Pattern.name=Nombre inválido
+Size.avatarBytes=El avatar que estas intentando subir es demasiado grande
 
 validation.user.UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 validation.user.UniqueEmail=El email est\u00E1 en uso
