--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -8,13 +8,13 @@ UniqueUsername=Username already in use
 MatchingPasswords=Passwords must match
 Pattern=Invalid {0}
 ValidatedEmail=There isn't a user with that email validated
-Avatar=The avatar uploaded is too big or invalid. Try selecting one smaller
-MoviePoster=The poster uploaded is not an image
+Image=The file uploaded is not an image.
 TagSize=The {0} you choose can't be longer than {1} characters
 Size.title=The {0} must be between {2} and {1} characters
 Size.body=The {0} must be between {2} and {1} characters
 Pattern.username=Invalid {0} 
 Pattern.name=Invalid {0}
+Size.avatarBytes=The avatar uploaded is too big
 
 validation.user.UniqueUsername=Username already in use
 validation.user.UniqueEmail=Email already in use
