signup view and basic form send functional. missing form validations

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -180,7 +180,7 @@ user.create.signUpDesc=Please fill this form to get free access to Moovify
 user.create.button=Create account
 user.create.alreadyAccount=Already have an account?
 user.create.newDescription=New description
-user.create.selectAvatar=Want to select an avatar? (Optional)
+user.create.selectAvatar=user.create.selectFile
 user.create.selectFile=Select file
 user.create.noAvatarSelected=No Avatar Selected
 user.create.avatarSelected=Selected Avatar:
