Refresh Token Implemented

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -406,6 +406,8 @@ search.user.sortCriteria.likes=Likes
 #####################################################################################################################################
 
 
+error.refreshJwt=Invalid refresh token
+
 error.moovifyErrorTitle = Moovify | {0}
 error.errorWithCode = ERROR {0}
 error.goBack=Return home
