--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -29,6 +29,8 @@ validation.user.UniqueEmail=El email est\u00E1 en uso
 validation.resetPassword.InvalidEmail=El email no es v\u00E1lido
 validation.resetPassword.EmailNotValidated=El email no ha sido validado
 
+error.refreshJwt=Token de refresco invalido
+
 #############################################################NAVBAR#############################################################
 
 navbar.searchDots=B\u00FAsqueda...
