reset password flow finished

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -277,7 +277,7 @@ mail.newComment.subTitile={0} said
 mail.newComment.title=New comment
 mail.newComment.goToComment=Go check the comment
 mail.passwordReset.linkMessage=Reset Password
-mail.passwordReset.message=If you're trying to reset your password please follow the link below
+mail.passwordReset.message=If you're trying to reset your password, here you have your security Token:
 mail.passwordReset.subject=Moovify - Password Reset
 mail.passwordReset.header=Password Reset
 mail.passwordReset.title=Password Reset
