--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -280,7 +280,7 @@ mail.newComment.subTitile={0} dijo
 mail.newComment.title=Nuevo comentario
 mail.newComment.goToComment=Ve a revisar el comentario
 mail.passwordReset.linkMessage=Restaurar contrase\u00F1a
-mail.passwordReset.message=Si estas intentando restaurar tu contrase\u00F1a, por favor has click en el link de abajo.
+mail.passwordReset.message=Si estas intentando restaurar tu contrase\u00F1a, aquí tienes tu Token de seguridad:
 mail.passwordReset.header=Restaurar contrase\u00F1a
 mail.passwordReset.subject=Moovify - Restauración de Contrase\u00F1a
 mail.passwordReset.title=Restaurar contrase\u00F1a
