Solved getting language from accept-headers. Even configuring validator

--- a/webapp/src/main/resources/ValidationMessages_es.properties
+++ b/webapp/src/main/resources/ValidationMessages_es.properties
@@ -3,8 +3,8 @@ javax.validation.constraints.Min.message         = Debe ser mayor o igual a {val
 javax.validation.constraints.NotNull.message     = No debe ser null
 javax.validation.constraints.Null.message        = Debe ser null
 javax.validation.constraints.Pattern.message     = Debe coincidir con "{regexp}"
-javax.validation.constraints.Size.message        = El tamaÒo debe estar entre {min} y {max}
+javax.validation.constraints.Size.message        = El tama√±o debe estar entre {min} y {max}
 
-custom.validation.TagsSize.message               = Las tags deben tener un m·ximo de {max} car·cteres
+custom.validation.TagsSize.message               = Las tags deben tener un m√°ximo de {max} caracteres
 custom.validation.Image.message                  = El archivo subido no es una imagen
-custom.validation.SpacesNormalization.message    = Uso inv·lido de espacios en ${validatedValue}
+custom.validation.SpacesNormalization.message    = Uso inv√°lido de espacios en ${validatedValue}
