--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -283,7 +283,7 @@ mail.passwordReset.header=Password Reset
 mail.passwordReset.title=Password Reset
 mail.confirmation.subject=Moovify - Confirmation Email
 mail.confirmation.header=Welcome to Moovify! We are glad you decided to join the family
-mail.confirmation.message=In order to enable our all features you'd need to confirm your email. Click the link below and it'll be all set.
+mail.confirmation.message=In order to enable our all features you'd need to confirm your email. Here you have the Token, paste it in the required section on your profile
 mail.confirmation.confirmLink=Confirm email
 mail.confirmation.title=Confirmation Email
 mail.resetPasswordTokenGenerated.body=Follow the included link to finally reset your password.
