--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -286,7 +286,7 @@ mail.passwordReset.subject=Moovify - Restauración de Contrase\u00F1a
 mail.passwordReset.title=Restaurar contrase\u00F1a
 mail.confirmation.subject=Moovify - Email de Confirmación
 mail.confirmation.header=Bienvenido a Moovify. Estamos muy felices que hayas decidido unirte a nuestra familia.
-mail.confirmation.message=Para habilitar todas nuestras funcionalidades debes verificar tu cuenta. Aquí tienes el Token, pégalo en la sección requerida en tu perfil
+mail.confirmation.message=Para habilitar todas nuestras funcionalidades debes verificar tu cuenta. Aquí tienes el Token, cópialo y pégalo en la sección requerida en tu perfil
 mail.confirmation.confirmLink=Confirmar email
 mail.confirmation.title=Email de confirmaci\u00F3n
 mail.resetPasswordTokenGenerated.body=Sigue el link incluido para terminar de restaurar tu contrase\u00F1a.
