Empty payload failure solved

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -444,6 +444,7 @@ error.invalidResetPasswordTokenException=El token de reseteo de contraseña no e
 error.forbiddenEntityRelationshipAccessException=Intentaste acceder a informacion de una entidad deshabilitada
 error.invalidEmailConfirmationTokenException=El token de confirmacion de email no es valido
 error.DuplicateUniqueUserAttributeException=El usuario que intentaste crear poseia atributos unicos duplicados
+error.payloadRequiredException=Este método requiere de un paquete
 
 error.invalidResetPasswordEmail=Email de reseteo de password no pertenece a ningun usuario
 error.notValidatedResetPasswordEmail=Email de reseteo de password no fue previamente confirmado
