--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -444,6 +444,7 @@ error.invalidResetPasswordTokenException=The password reset token provided is no
 error.forbiddenEntityRelationshipAccessException=You tried to access information of a disabled entity
 error.invalidEmailConfirmationTokenException=The email confirmation token provided is not valid
 error.DuplicateUniqueUserAttributeException=The user you tried to create had duplicated unique attributes
+error.payloadRequiredException=This method requires a payload
 
 error.invalidResetPasswordEmail=Reset password email doesn't belong to any user
 error.notValidatedResetPasswordEmail=Reset password email was not confirmed previously
